# fetch-yt-data-tools

./: .gitignore  Cargo.toml  README.md  readme-en.md  youtubeUrl.md
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/use_cases/: mod.rs  youtube.rs
src/auxiliary/: mod.rs
src/auxiliary/input_urls/: input.rs  mod.rs
src/auxiliary/settings_cfg/: cli_settings.rs  file_settings.rs  mod.rs  output_file.rs  settings.rs
src/auxiliary/settings_cfg/collections/: api_key.rs  mod.rs  path_buf_valid_utf8.rs
src/domain/: error.rs  mod.rs
src/domain/models/: handle.rs  mod.rs
src/domain/models/id/: id_type.rs  mod.rs  playlist_id.rs  valid_ascii.rs  video_id.rs
src/domain/models/metadata/: data.rs  mod.rs  playlist_data.rs  video_data.rs
src/domain/models/url/: build_url.rs  enum_url.rs  mod.rs  playlist_url.rs  video_url.rs
src/domain/repositories/: mod.rs  youtube.rs
src/infrastructure/: mod.rs
src/infrastructure/fetch/: api_client.rs  api_request.rs  error.rs  mod.rs  response.rs
src/infrastructure/fetch/collections/: api_key.rs  api_option_key.rs  api_options_part.rs  max_id_num.rs  mod.rs  quota.rs
src/infrastructure/fetch/playlist/: fetch_data.rs  mod.rs  response.rs
src/infrastructure/output_to_file/: mod.rs  output.rs  output_file_ext.rs  serialize_safely.rs
src/util/: mod.rs
src/util/convert/: mod.rs  separate_vec_deque_result.rs
src/util/serde/: mod.rs  serde_tracing_level_filter.rs
src/util/tracing/: expect_log.rs  mod.rs  tracing_log.rs  unwrap_log.rs
tools/: log_to_json.py
(+5 files in other folders)
