[package]
name = "fetch-yt-data-tools"
version = "0.1.0"
edition = "2021"
authors = ["konattsu"]
license = "Apache-2.0"
repository = "https://github.com/konattsu/fetch-yt-data-tools/"
readme = "README.md"

[dependencies]
reqwest = {version = "0.12", features = ["rustls-tls", "json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.133"
serde_yaml = "=0.9.33"
toml = "0.8.19"
thiserror = "2"
async-trait = "0.1.83"
regex = "1.11"
chrono = {version = "0.4.39", features = ["serde"]}
chrono-tz = {version ="0.10", features = ["serde"]}
dotenv = "0.15.0"
tokio = {version = "1.42", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "json"]}
tracing-appender = "0.2.3"
thread-id = "5.0"
clap = {version = "4.5", features = ["env", "derive"]}
futures = "0.3.31"

# [dev-dependencies]
# mockito = "1.5.0"
